added the subscirbe layout

--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -1,5 +1,18 @@
 <style>
-  
+  .subscribe {
+    background-color: rgb(204, 0, 0);
+    color:white;
+    border: none;/*helps to signify the type of border is this case no border*/
+    padding:10px;
+    padding-left:16px;
+    padding-right:16px;
+    border-radius: 2px; /*Roundness of the button*/
+    cursor:pointer;
+    margin-right: 20px; /*Helps to add space to right of this button*/
+    margin-left:20px;
+    transition: opacity 0.15s;
+    vertical-align:top;
+  }
 
 </style>
 <button class="subscribe">SUBSCRIBE</button>
