added the subscirbe animation

--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -13,6 +13,12 @@
     transition: opacity 0.15s;
     vertical-align:top;
   }
+  .subscribe:hover{
+    opacity: 0.78;
+  }
+  .subscribe:active{
+    opacity: 0.38;
+  }
 
 </style>
 <button class="subscribe">SUBSCRIBE</button>
