added the join layout

--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -19,6 +19,20 @@
   .subscribe:active{
     opacity: 0.38;
   }
+  .join {
+    background-color: white;
+    border-color: rgb(6, 95, 212);
+    border-style: solid; /* Helps to solidify the border with a single color*/
+    padding:9px;
+    padding-left:16px;
+    padding-right:16px;
+    margin-right:8px;
+    border-width:1px;/*thickness of the border*/
+    color:rgb(6, 95, 212); /*text-color*/
+    border-radius: 2px;
+    cursor:pointer; /*changes the cursor to pointer type when button is hovered upon*/
+    transition: background-color 0.15s, color 0.15s;
+  }
 
 </style>
 <button class="subscribe">SUBSCRIBE</button>
