added the join animation

--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -33,6 +33,14 @@
     cursor:pointer; /*changes the cursor to pointer type when button is hovered upon*/
     transition: background-color 0.15s, color 0.15s;
   }
+  .join:hover {
+    background-color: rgb(51, 66, 199);
+    color:white;
+  }
+  .join:active{
+    opacity:0.68;
+  }
+
 
 </style>
 <button class="subscribe">SUBSCRIBE</button>
