--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -41,7 +41,21 @@
     opacity:0.68;
   }
 
-
+  .tweet {
+    background-color: rgb(29, 155, 240);
+    border:none;
+    color:white;
+    padding:9px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius:36px;
+    font-weight: bold; /*For adjusting boldness od th edont*/
+    font-size: 15px;
+    margin-left:7px;
+    cursor: pointer;
+    transition: box-shadow 0.15s, opacity 0.15s;
+    vertical-align:top;
+  }
 </style>
 <button class="subscribe">SUBSCRIBE</button>
 <button class ="join">JOIN</button>
