added the tweet animation

--- a/exercise/buttons.html
+++ b/exercise/buttons.html
@@ -56,6 +56,12 @@
     transition: box-shadow 0.15s, opacity 0.15s;
     vertical-align:top;
   }
+  .tweet:hover {
+    box-shadow:2px 5px 10px rgba(0,0,0,0.165);
+  }
+  .tweet:active{
+    opacity:0.75;
+  }
 </style>
 <button class="subscribe">SUBSCRIBE</button>
 <button class ="join">JOIN</button>
