--- a/exercise/4hk.html
+++ b/exercise/4hk.html
@@ -1,4 +1,12 @@
 <style>
+  .button{
+    padding:4px;
+    padding: top 8px, bottom 8px;
+    margin: right 2px;
+  }
+  .a{
+    margin: right 6px, left 6px;
+  }
 </style>
 
 <button class="back">Back</button>
