Corrected the styling

--- a/exercise/4hk.html
+++ b/exercise/4hk.html
@@ -1,17 +1,21 @@
 <style>
-  .button{
-    padding:4px;
-    padding: top 8px, bottom 8px;
-    margin: right 2px;
+  .back{
+    padding:6px;
+    padding: top 12px, bottom 12px;
+    margin-right: 20px;
   }
-  .a{
-    margin: right 6px, left 6px;
+  .link{
+    margin-right: 20px;
+  }
+  .next{
+    padding:6px;
+    padding: top 12px, bottom 12px;
   }
 </style>
 
 <button class="back">Back</button>
-<a href="1.html">1</a>
-<a href="2.html">2</a>
-<a href="3.html">3</a>
-<a href="4.html">4</a>
+<a class="link" href="1.html">1</a>
+<a class="link" href="2.html">2</a>
+<a class="link" href="3.html">3</a>
+<a class="link" href="4.html">4</a>
 <button class="next">Next</button>
