Added the style to strectch button

--- a/exercise/4hk.html
+++ b/exercise/4hk.html
@@ -11,6 +11,18 @@
     padding:6px;
     padding: top 12px, bottom 12px;
   }
+
+  .stretch{
+    background-color:green;
+    color:white;
+    padding:6px;
+    font-size:16.4px;
+    padding-left:15px;
+    padding-right:15px;
+    cursor: pointer;
+    border:none;
+    transition: all 0.15s;
+  }
 </style>
 
 <button class="back">Back</button>
@@ -19,3 +31,5 @@
 <a class="link" href="3.html">3</a>
 <a class="link" href="4.html">4</a>
 <button class="next">Next</button>
+<br><br>
+<button class ="stretch">Stretch</button>
