Added the animation

--- a/exercise/4hk.html
+++ b/exercise/4hk.html
@@ -23,6 +23,12 @@
     border:none;
     transition: all 0.15s;
   }
+  
+  .stretch:hover{
+    padding:14px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 </style>
 
 <button class="back">Back</button>
