--- a/exercise/4hk.html
+++ b/exercise/4hk.html
@@ -36,6 +36,7 @@
     font-size:16.4px;
     padding-left:15px;
     padding-right:15px;
+    margin-bottom:3px;
     cursor: pointer;
     border:none;
     box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.27);
@@ -45,6 +46,27 @@
     box-shadow:none;
     margin-top:3px;
     margin-left:3px;
+    margin-bottom:0px;
+  }
+
+  .number{
+    background-color: green;
+    color:white;
+    border:none;
+    padding:6px;
+    padding-left:8px;
+    padding-right:8px;
+    margin-right: 14px;
+    margin-left: 14px;
+    border:none;
+    cursor:pointer;
+    transition: all 0.15s;
+  }
+  .number:hover{
+    padding-left: 14px;
+    padding-right:14px;
+    margin-left:8px;
+    margin-right:8px;
   }
 </style>
 
@@ -58,3 +80,7 @@
 <button class ="stretch">Stretch</button>
 <br><br>
 <button class="shadow">Shadow</button>
+<br><br>
+<button class="number">One</button>
+<button class="number">Two</button>
+<button class="number">Three</button>
