added the second exercise complete

--- a/exercise/5/5b.html
+++ b/exercise/5/5b.html
@@ -1,6 +1,17 @@
 <style>
-
+  p{
+    font-family:Arial;
+  }
+  .deal{
+    font-size: 36px;
+    font-weight:bold;
+  }
+  .desc{
+    color:red;
+    font-style:italic;
+  }
 </style>
 <body>
-  
+  <p class = "deal">Biggest Deals of the Year!</p>
+  <p class = "desc">Sales end Tuesday</p>
 </body>
