--- a/exercise/5/5b.html
+++ b/exercise/5/5b.html
@@ -5,8 +5,10 @@
   .deal{
     font-size: 36px;
     font-weight:bold;
+    margin-bottom:10px;
   }
   .desc{
+    margin-top:0px;
     color:red;
     font-style:italic;
   }
