--- a/exercise/5/5c.html
+++ b/exercise/5/5c.html
@@ -1,3 +1,39 @@
-<style></style>
+<style>
+  p{
+    font-family:Verdana;
+    margin-top:0px;
+    margin-bottom:0px;
+  }
+  .title{
+    font-weight:bold;
+    font-size:20px;
+    margin-bottom: 2px;
+  }
+  .subtitle{
+    color:grey;
+    margin-bottom:20px;
+  }
+  .desc{
+    width:260px;
+    font-size:14px;
+    margin-bottom:20px;
+  }
 
-<body></body>
+  .started{
+    padding:8px;
+    padding-left: 15px;
+    padding-right:15px;
+    background-color: green;
+    border:none;
+    border-radius:7px;
+    color:white;
+    cursor: pointer;
+  }
+</style>
+
+<body>
+  <p class ="title">HTML CSS Course</p>
+  <p class ="subtitle">Beginner to Pro</p>
+  <p class="desc">In this course, we'll learn the skills you need to become a developer.</p>
+  <button class="started">Get Started</button>
+</body>
