Completed the 5d file

--- a/exercise/5/5d.html
+++ b/exercise/5/5d.html
@@ -1,5 +1,27 @@
 <style>
+  p{
+    font-family:Arial;
+    margin-top:0px;
+    margin-bottom:0px;
+  }
+  .shop{
+    font-size: 30px;
+    font-weight:bold;
+    margin-bottom:20px;
+  }
+  .desc{
+    width:400px;
+    text-align:center;
+    margin-bottom:20px;
+  }
+  .learn{
+    width:400px;
+    text-align:center;
+    color:blue;
+  }
 </style>
 <body>
-  
+  <p class="shop">Shopping for your business?</p>
+  <p class="desc">See how Apple at work can help.</p>
+  <p class ="learn">Learn More &gt;</p>
 </body>
