--- a/exercise/5/5e.html
+++ b/exercise/5/5e.html
@@ -1,2 +1,40 @@
-<style></style>
-<body></body>
+<style>
+  p{
+    font-family:arial;
+    margin-top:0px;
+    margin-bottom:10px;
+    text-align: center;
+  }
+  .new{
+    font-size:12px;
+    color:red;
+  }
+  .mac{
+    font-weight:bold;
+    font-size:20px;
+  }
+  .super{
+    font-size:36px;
+    font-weight:bold;
+  }
+  .price{
+    color:grey;
+  }
+  .buy{
+    margin-left:49%;
+    padding:5px;
+    padding-right:10px;
+    padding-left:10px;
+    border:none;
+    background-color:rgb(53, 53, 240);
+    color:white;
+    border-radius:15px;
+  }
+</style>
+<body>
+  <p class ="new">New</p>
+  <p class ="mac">MacBook Pro</p> 
+  <p class="super">Supercharged for pros.</p>
+  <p class ="price">From $1999</p>
+  <button class="buy">Buy</button>
+</body>
