--- a/exercise/7.html
+++ b/exercise/7.html
@@ -9,11 +9,19 @@
       width:200px;
       border-radius: 10px;
     }
+    .b{
+      width:200px;
+      height:200px;
+      object-fit:cover;
+    }
   </style>
 </head>
 <body>
   <h1>7a.</h1>
   <img class="a"src="thumbnail-1.webp">
+
+  <h1>7b.</h1>
+  <img class="b" src="thumbnail-1.webp">
 
 </body>
 </html>
