--- a/exercise/7.html
+++ b/exercise/7.html
@@ -14,6 +14,13 @@
       height:200px;
       object-fit:cover;
     }
+    .c{
+      width:200px;
+      height: 200px;
+      object-fit:cover;
+      object-position:center ;
+      border-radius: 200px;
+    }
   </style>
 </head>
 <body>
@@ -23,5 +30,7 @@
   <h1>7b.</h1>
   <img class="b" src="thumbnail-1.webp">
 
+  <h1>7c.</h1>
+  <img class="c" src="thumbnail-1.webp">
 </body>
 </html>
