--- a/exercise/7.html
+++ b/exercise/7.html
@@ -21,6 +21,15 @@
       object-position:center ;
       border-radius: 200px;
     }
+    .search{
+      border-radius: 3px;
+      border:solid;
+      border-width: 0.5px;
+      height:25px;
+      font-size: 11px;
+      padding-left:5px;
+      border-color: grey;
+    }
   </style>
 </head>
 <body>
@@ -32,5 +41,8 @@
 
   <h1>7c.</h1>
   <img class="c" src="thumbnail-1.webp">
+
+  <h1>7d.</h1>
+  <input type="text" placeholder="Search" class="search">
 </body>
 </html>
