--- a/exercise/7.html
+++ b/exercise/7.html
@@ -30,6 +30,14 @@
       padding-left:5px;
       border-color: grey;
     }
+    .google{
+      border:none;
+      border-radius: 20px;
+      height:15px;
+      padding:10px;
+      padding-right: 200px;
+      box-shadow: 0px 0px 2px rgba(92,92,92, 0.8);
+    }
   </style>
 </head>
 <body>
@@ -44,5 +52,9 @@
 
   <h1>7d.</h1>
   <input type="text" placeholder="Search" class="search">
+
+  <h1>7e.</h1>
+  <input type="text" placeholder="Search google or type a URL" class="google">
+
 </body>
 </html>
