--- a/exercise/7.html
+++ b/exercise/7.html
@@ -38,6 +38,30 @@
       padding-right: 200px;
       box-shadow: 0px 0px 2px rgba(92,92,92, 0.8);
     }
+    .text{
+      font-size:13px;
+      font-family: Arial;
+      color: grey;
+      margin-bottom: 5px;
+    }
+    .email-box{
+      font-size: 20px;
+      border:solid;
+      border-width:2px;
+      border-color: grey;
+      border-radius: 2px;
+    }
+    .agree{
+      border: none;
+      padding:10px;
+      padding-left:100px;
+      padding-right:100px;
+      background-color: blue;
+      color:white;
+      margin-top:10px;
+      border-radius: 25px;
+      font-size:16px;
+    }
   </style>
 </head>
 <body>
@@ -56,5 +80,10 @@
   <h1>7e.</h1>
   <input type="text" placeholder="Search google or type a URL" class="google">
 
+  <h1>7f.</h1>
+  <p class="text">Email</p>
+  <input type="text" class="email-box">
+  <p class="text">By clicking Agree &#38; Join , you agree to the Privacy Policy</p>
+  <button class="agree">Agree &#38; Join</button>
 </body>
 </html>
