--- a/exercise/7.html
+++ b/exercise/7.html
@@ -62,6 +62,18 @@
       border-radius: 25px;
       font-size:16px;
     }
+
+    .pfp{
+      vertical-align: middle;
+      height:50px;
+      width:50px;
+      object-fit: cover;
+      object-position: center;
+      border-radius: 100px;
+    }
+    .twitter{
+      vertical-align: middle;/*wont display side by side because i will learn it using flexbox*/
+    }
   </style>
 </head>
 <body>
@@ -85,5 +97,10 @@
   <input type="text" class="email-box">
   <p class="text">By clicking Agree &#38; Join , you agree to the Privacy Policy</p>
   <button class="agree">Agree &#38; Join</button>
+
+  <h1>7g.</h1>
+  <img src="thumbnail-1.webp" class="pfp">
+  <p class="twitter">What's happening?</p>
+  <button class="tweet">Tweet</button>
 </body>
 </html>
