--- a/exercise/8.html
+++ b/exercise/8.html
@@ -13,11 +13,29 @@
       border-color: grey;
       margin-bottom: 5px;
     }
+
+    p.text{
+      width:195px;
+      display:inline-block;
+      vertical-align: middle;
+
+    }
+    button.form{
+      display:inline-block;
+      width:max-content;
+    }
   </style>
 </head>
 <body>
   <h1>8a.</h1>
   <input type="text" class="form" placeholder="Name">
   <input type="text" class="form" placeholder="Email">
+
+  <h1>
+    8b.
+  </h1>
+  <p class="text">Thanks for chatting with our customer support. Would you like to take our quick survey?</p>
+  <button class="form">Yes</button>
+  <button class="form">No</button>
 </body>
 </html>
