prev one was 8b 8 c is skipped

--- a/exercise/8.html
+++ b/exercise/8.html
@@ -37,5 +37,8 @@
   <p class="text">Thanks for chatting with our customer support. Would you like to take our quick survey?</p>
   <button class="form">Yes</button>
   <button class="form">No</button>
+
+  <h1>8c.</h1>
+  <p>Sipped</p>
 </body>
 </html>
