--- a/exercise/8.html
+++ b/exercise/8.html
@@ -24,6 +24,39 @@
       display:inline-block;
       width:max-content;
     }
+
+    .first{
+      display: inline-block;
+      border-radius: 6px;
+      border:solid;
+      border-color:grey;
+      border-width:0.5px;
+      padding:8px;
+      padding-right:0px;
+    }
+    .email{
+      display:block;
+      margin:8px;
+      margin-left:0px;
+      border-radius: 6px;
+      border:solid;
+      border-color:grey;
+      border-width:0.5px;
+      padding:8px;
+      padding-right: 185px;
+    }
+    .sign{
+      border:none;
+      border-radius:6px;
+      background-color: rgb(68, 109, 241);
+      padding:8px;
+      padding-right: 160px;
+      color:white;
+      text-align: center;
+      padding-left:160px;
+      cursor:pointer;
+    }
+   
   </style>
 </head>
 <body>
@@ -40,5 +73,11 @@
 
   <h1>8c.</h1>
   <p>Sipped</p>
+
+  <h1>8d.</h1>
+  <input type="text" class="first" placeholder="First name">
+  <input type="text" class="first" placeholder="Last name">
+  <input type="text" class="email" placeholder="Email">
+  <button class="sign">Sign Up</button>
 </body>
 </html>
