--- a/exercise/9.html
+++ b/exercise/9.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercise-9</title>
+  <style>
+    .square{
+      width:200px;
+      height:200px;
+      background-color: red;
+    }
+  </style>
 </head>
 <body>
-  
+  <h1>8a.</h1>
+  <div class="square"></div>
 </body>
 </html>
