--- a/exercise/9.html
+++ b/exercise/9.html
@@ -10,10 +10,19 @@
       height:200px;
       background-color: red;
     }
+    .circle{
+      width:200px;
+      height:200px;
+      background-color: green;
+      border-radius: 200px;
+    }
   </style>
 </head>
 <body>
   <h1>8a.</h1>
   <div class="square"></div>
+  
+  <h1>8b.</h1>
+  <div class="circle"></div>
 </body>
 </html>
