correcting prev comments

--- a/exercise/9.html
+++ b/exercise/9.html
@@ -15,6 +15,7 @@
       height:200px;
       background-color: green;
       border-radius: 200px;
+      /*prev. comments were wrong it was 9 actually*/
     }
   </style>
 </head>
