--- a/exercise/9.html
+++ b/exercise/9.html
@@ -17,6 +17,16 @@
       border-radius: 200px;
       /*prev. comments were wrong it was 9 actually*/
     }
+    .care{
+      border:solid;
+      border-color:grey;
+      padding:10px;
+      width:300px;
+      border-width:0.5px;
+    }
+    .care >p{
+      margin-top: 0px;
+    }
   </style>
 </head>
 <body>
@@ -25,5 +35,12 @@
   
   <h1>8b.</h1>
   <div class="circle"></div>
+
+  <h1>8c.</h1>
+  <div class="care">
+    <p>Satisfied with our service?</p>
+    <button>Yes</button>
+    <button>No</button>
+  </div>
 </body>
 </html>
