--- a/project/youtube.html
+++ b/project/youtube.html
@@ -3,21 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube,com Clone</title>
+  <title>YouTube.com Clone</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+    p{
+      font-family:Roboto, Arial;
+      margin-top:0px;
+      margin-bottom: 0px;
+    }
+    .thumbnail-row{
+      margin-bottom: 13px;
+    }
     .thumbnail{
       margin-top: 20px;
       width:300px;
+      display:block;
     }
     .serach{
+      display:block;
       font-size:20px;
-      margin-left:12px;
+    }
+    .video-title{
+      margin-top: 0px;
+      font-size:14px;
+      font-weight: 500;
+      line-height:18px;
+      margin-bottom:12px;
+    }
+    .preview{
+      width:300px;
+      display:inline-block;
+      vertical-align:top;
+      margin-right:10px;
+    }
+
+    .channel-picture{
+      display:inline-block;
+      width:50px;
+      vertical-align: top;
+    }
+
+    .video-info{
+      width:200px;
+      display:inline-block;
+      vertical-align: top;
+    }
+    .profile-picture{
+      width:40px;
+      border-radius: 100%;
+    }
+    .author, .stats{
+      font-size:12px;
+      color:rgb(96,96,96);
+    }
+   
+    .author{
+      margin-bottom: 4px;
     }
   </style>
 </head>
 <body>
   <input  class="search" type="text" placeholder="Search">
   <br>
-  <img class="thumbnail"src="thumbnails/thumbnail-1.webp" alt="MArquee Brown video">
+  
+  <div class="preview">
+    <div class="thumbnail-row">
+      <img class="thumbnail"src="thumbnails/thumbnail-1.webp" alt="MArquee Brown video">
+    </div>
+    <div>
+      <div class="channel-picture">
+        <img class="profile-picture" src="channel-profile/channel-1.jpeg">
+      </div>
+      <div class="video-info">
+        <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+      <p class="author">Marques Brownlee</p>
+      <p class="stats">3.4M views &#183; 6 months ago</p>
+      </div>
+    </div>
+  </div>
+  <div class="preview">
+    <div class="thumbnail-row">
+      <img class="thumbnail"src="thumbnails/thumbnail-2.webp" alt="MArquee Brown video">
+    </div>
+    <div>
+      <div class="channel-picture">
+        <img class="profile-picture" src="channel-profile/channel-2.jpeg">
+      </div>
+      <div class="video-info">
+        <p class="video-title">Try not to Laugh Challenge #9 </p>
+      <p class="author">Markiplier</p>
+      <p class="stats">19M views &#183; 4 years ago</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
