--- a/exercise/10/10e.html
+++ b/exercise/10/10e.html
@@ -5,6 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10g</title>
   <style>
+    .outside{
+      display:inline-block;
+      border:solid;
+      border-color: rgb(220,220,220);
+      border-width: 2px;
+      width:165px;
+      height:270px;
+      vertical-align: top;
+      margin-right:20px;
+      }
+    .pfp{
+      object-fit: cover;
+      width:100%;
+      height:65%;
+    }
+    .text{
+      margin-left:5px;
+    }
+    .name{
+      margin-top:3px;
+      font-weight:600;
+      margin-bottom:0px;
+      font-family:Arial;
+      font-size: 15px;
+    }
+
+    .mutual-pfp{
+      width:22px;
+      border-radius: 100%;
+      vertical-align: middle;
+    }
+    .mutual-friends{
+      vertical-align:middle;
+      font-family:Arial;
+      display:inline-block;
+      color:grey;
+      font-size:11.5px;
+    }
+    .add{
+      border:none;
+      background-color: rgb(90, 130, 241);
+      color:white;
+      padding:7px;
+      padding-left:13px;
+      padding-right:13px;
+      font-size:12px;
+      border-radius: 7%;
+    }
   </style>
 </head>
 <body>
@@ -38,6 +86,18 @@
       </div>
     </div>
   </div>
-  <div class="outside"></div>
+  <div class="outside"><img src="pfp/OIP (1).jpg" class="pfp">
+    <div class="text">
+      <div class="profile-name">
+        <p class="name">Rex</p>
+      </div>
+      <div class="mutual">
+        <img src="pfp/channel-2.jpeg" class="mutual-pfp">
+        <p class="mutual-friends">4 mutual friends</p>
+      </div>
+      <div class="button">
+        <button class="add">Add Friend</button>
+      </div>
+    </div></div>
 </body>
 </html>
