--- a/exercise/11.html
+++ b/exercise/11.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercise-11</title>
-  
+  <style>
+    .a{
+      display:grid;
+      grid-template-columns: 200px 75px;
+    }
+  </style>  
 </head>
 <body>
-  
+  <h1>11 a.</h1>
+  <div class="a">
+    <div style="background-color: lightblue;">200px</div>
+    <div style="background-color: lightpink;">75px</div>
+  </div>
+
+
 </body>
 </html>
