--- a/exercise/11.html
+++ b/exercise/11.html
@@ -9,6 +9,10 @@
       display:grid;
       grid-template-columns: 200px 75px;
     }
+    .b{
+      display:grid;
+      grid-template-columns: 50px 1fr 75px;
+    }
   </style>  
 </head>
 <body>
@@ -18,6 +22,11 @@
     <div style="background-color: lightpink;">75px</div>
   </div>
 
-
+  <h1>11 b.</h1>
+  <div class="b">
+    <div style="background-color: lightblue;">Col1</div>
+    <div style="background-color: lightpink;">Col2</div>
+    <div style="background-color: lightblue;">Col3</div>
+  </div>
 </body>
 </html>
