--- a/exercise/11.html
+++ b/exercise/11.html
@@ -20,6 +20,61 @@
       row-gap:10px;
     }
   </style>  
+  <style>
+    .d{
+      display:grid;
+      grid-template-columns: 165px 165px 165px;
+      column-gap: 15px;
+      align-items:center;
+    }
+    .outside{
+      border:solid;
+      border-color: rgb(220,220,220);
+      border-width: 2px;
+      width:165px;
+      height:270px;
+      vertical-align: top;
+      margin-right:20px;
+      }
+    .pfp{
+      object-fit: cover;
+      width:100%;
+      height:65%;
+    }
+    .text{
+      margin-left:5px;
+    }
+    .name{
+      margin-top:3px;
+      font-weight:600;
+      margin-bottom:0px;
+      font-family:Arial;
+      font-size: 15px;
+    }
+
+    .mutual-pfp{
+      width:22px;
+      border-radius: 100%;
+      vertical-align: middle;
+    }
+    .mutual-friends{
+      vertical-align:middle;
+      font-family:Arial;
+      display:inline-block;
+      color:grey;
+      font-size:11.5px;
+    }
+    .add{
+      border:none;
+      background-color: rgb(90, 130, 241);
+      color:white;
+      padding:7px;
+      padding-left:13px;
+      padding-right:13px;
+      font-size:12px;
+      border-radius: 7%;
+    }
+  </style>
 </head>
 <body>
   <h1>11 a.</h1>
@@ -45,6 +100,54 @@
     <div style="background-color: lightpink;">Col2</div>
     <div style="background-color: lightpink;">Col3</div>
     <div style="background-color: lightpink;">Col4</div>
+  </div>
+
+  <h1>11d.</h1>
+  <div class="d">
+    
+  <div class="outside">
+    <img src="10/pfp/download.jpg" class="pfp">
+    <div class="text">
+      <div class="profile-name">
+        <p class="name">Oliver</p>
+      </div>
+      <div class="mutual">
+        <img src="10/pfp/channel-2.jpeg" class="mutual-pfp">
+        <p class="mutual-friends">2 mutual friends</p>
+      </div>
+      <div class="button">
+        <button class="add">Add Friend</button>
+      </div>
+    </div>
+    </div>
+  <div class="outside">
+    <img src="10/pfp/OIP.jpg" class="pfp">
+    <div class="text">
+      <div class="profile-name">
+        <p class="name">Mimi</p>
+      </div>
+      <div class="mutual">
+        <img src="10/pfp/channel-2.jpeg" class="mutual-pfp">
+        <p class="mutual-friends">3 mutual friends</p>
+      </div>
+      <div class="button">
+        <button class="add">Add Friend</button>
+      </div>
+    </div>
+  </div>
+  <div class="outside"><img src="10/pfp/OIP (1).jpg" class="pfp">
+    <div class="text">
+      <div class="profile-name">
+        <p class="name">Rex</p>
+      </div>
+      <div class="mutual">
+        <img src="10/pfp/channel-2.jpeg" class="mutual-pfp">
+        <p class="mutual-friends">4 mutual friends</p>
+      </div>
+      <div class="button">
+        <button class="add">Add Friend</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
