--- a/exercise/12.html
+++ b/exercise/12.html
@@ -6,6 +6,13 @@
   <title>Exercise-11</title>
 </head>
 <body>
-  
+  <h1>12a</h1>
+  <div class="a" style="
+  display: flex;
+  flex-direction:row;">
+    <div style="background-color: lightblue;
+    width:200px;">200px</div>
+    <div style="background-color: lightpink; width:75px;">75px</div>
+  </div>
 </body>
 </html>
