--- a/exercise/12.html
+++ b/exercise/12.html
@@ -14,5 +14,15 @@
     width:200px;">200px</div>
     <div style="background-color: lightpink; width:75px;">75px</div>
   </div>
+  <div style="
+  display: flex;
+  flex-direction:row;">
+    <div style="background-color: lightblue;
+    width:50px;">item1</div>
+    <div style="background-color: lightpink;
+    flex:1">item2</div>
+    <div style="background-color: lightblue;
+    width:75px;">item3</div>
+  </div>
 </body>
 </html>
