--- a/exercise/12.html
+++ b/exercise/12.html
@@ -6,7 +6,7 @@
   <title>Exercise-11</title>
 </head>
 <body>
-  <h1>12a</h1>
+  <h1>12a.</h1>
   <div class="a" style="
   display: flex;
   flex-direction:row;">
@@ -14,6 +14,8 @@
     width:200px;">200px</div>
     <div style="background-color: lightpink; width:75px;">75px</div>
   </div>
+
+  <h1>12b.</h1>
   <div style="
   display: flex;
   flex-direction:row;">
@@ -24,5 +26,17 @@
     <div style="background-color: lightblue;
     width:75px;">item3</div>
   </div>
+
+  <h1>12c.</h1>
+  <div style="
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;">
+    <div style="background-color: lightpink;">item1</div>
+    <div style="background-color: lightpink;">item2</div>
+    <div style="background-color: lightpink;">item3</div>
+    <div style="background-color: lightpink;">item4</div>
+  </div>
+
 </body>
 </html>
