--- a/exercise/12.html
+++ b/exercise/12.html
@@ -38,5 +38,19 @@
     <div style="background-color: lightpink;">item4</div>
   </div>
 
+  <h1>12d.</h1>
+  <div style="
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  border:solid;
+  border-width:1px;
+  border-color: rgb(165,165,165);">
+    <div style="background-color: lightpink;">item1</div>
+    <div style="background-color: lightpink;">item2</div>
+  </div>
+
 </body>
 </html>
