--- a/exercise/12.html
+++ b/exercise/12.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercise-11</title>
+  <style>
+    .e{
+      display:flex;
+      flex-direction: column;
+      border:solid;
+      border-radius: 8px;
+      border-width: 1px;
+      border-color: rgb(165,165,165);
+      width:250px;
+      font-family:Arial;
+      font-size:15px;
+    }
+    .row{
+      display: flex;
+      justify-content: space-between;
+      margin:8px;
+    }
+    .row-notif{
+      background-color: blue;
+      border-radius: 10px;
+      color:white;
+      padding-left:8px;
+      padding-right: 8px;
+    }
+  </style>
 </head>
 <body>
   <h1>12a.</h1>
@@ -52,5 +77,20 @@
     <div style="background-color: lightpink;">item2</div>
   </div>
 
+  <h1>12e.</h1>
+  <div class="e">
+    <div class="row">
+      <div class="row-text">Home</div>
+      <div class="row-notif">14</div>
+    </div>
+    <div class="row">
+      <div class="row-text">Notification</div>
+      <div class="row-notif">3</div>
+    </div>
+    <div class="row">
+      <div class="row-text">Messages</div>
+      <div class="row-notif">5</div>
+    </div>
+  </div>
 </body>
 </html>
