--- a/project/youtube.html
+++ b/project/youtube.html
@@ -7,58 +7,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <style>
-    p{
-      font-family:Roboto, Arial;
-      margin-top:0px;
-      margin-bottom: 0px;
-    }
-    .thumbnail{
-      width:100%;
-      margin-bottom: 10px;
-    }
-    .serach{
-      display:block;
-      font-size:20px;
-    }
-    .video-title{
-      margin-top: 0px;
-      font-size:14px;
-      font-weight: 500;
-      line-height:18px;
-      margin-bottom:12px;
-    }
-
-    .video-info-grid{
-      display:grid;
-      grid-template-columns: 50px 1fr;
-      
-    }
-
-    .profile-picture{
-      width:40px;
-      border-radius: 100%;
-    }
-    .author, .stats{
-      font-size:12px;
-      color:rgb(96,96,96);
-    }
-   
-    .author{
-      margin-bottom: 4px;
-    }
-
-    .video-container{
-      display:grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      column-gap:15px;
-      row-gap:40px;
-    }
-  </style>
+<link rel="stylesheet" href="styles/general.css">
+<link rel="stylesheet" href="styles/header.css">
+<link rel="stylesheet" href="styles/video.css">
 </head>
 <body>
-  <input  class="search" type="text" placeholder="Search">
-  <br><br>
+  <div class="header">
+    <div class="left-section">left section</div>
+    <div class="middle-section"><input  class="search" type="text" placeholder="Search"></div>
+    <div class="right-section"> right section</div>
+  </div>
+  <br>
   <div class="video-container">
   <!--First-->
   <div class="preview">
