--- a/exercise/13.html
+++ b/exercise/13.html
@@ -4,12 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  
+  <style>
+    .main{
+      border-style:solid;
+      border-color:rgb(220, 220, 220);
+      border-width:1px;
+    }
+    .header{
+      font-family:Arial;
+      font-size:11px;
+      margin:5px;
+      color:gray;
+    }
+    
+  </style>
 </head>
 <body>
   <div class="main">
     <div class="header">
-
+      ALL INBOXES
     </div>
     <div class="e-mail">
       <div class="image">
