--- a/exercise/13.html
+++ b/exercise/13.html
@@ -13,6 +13,9 @@
       border-style:solid;
       border-color:rgb(220, 220, 220);
       border-width:1px;
+      padding-left: 10px;
+      padding-right:10px;
+      width:fit-content;
     }
     .header{
       font-family:Arial;
@@ -25,6 +28,7 @@
       display:flex;
       flex-direction: row;
       align-items: center;
+      margin-bottom:30px;
     }
     .pfp{
       height:40px;
@@ -45,6 +49,16 @@
     .time{
       color:grey;
       font-size:13px;
+    }
+    .subject{
+      font-size: 13.3px;;
+      font-weight: 600;
+      margin-bottom:2px;
+    }
+    .preview{
+      color:grey;
+      font-size:12px;
+      margin-right:20px;
     }
   </style>
 </head>
