added the style from previous exercise

--- a/exercise/13e.html
+++ b/exercise/13e.html
@@ -4,6 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>13e</title>
+  <style>
+    body{
+      font-family:Arial;
+      font-size:15px;
+    }
+    .main{
+      border-style:solid;
+      border-color:rgb(220, 220, 220);
+      border-width:1px;
+      padding-left: 10px;
+      padding-right:10px;
+      width:fit-content;
+    }
+    .header{
+      font-family:Arial;
+      font-size:11px;
+      margin:5px;
+      color:gray;
+    }
+    .e-mail{
+      margin-top: 10px;
+      display:flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom:30px;
+    }
+    .pfp{
+      height:40px;
+      width:40px;
+      border-radius:25px;
+      margin:5px;
+    }
+    .text-top{
+      display:flex;
+      flex-direction:row;
+      justify-content: space-between;
+      padding-bottom: 5px;
+    }
+    .username{
+      font-weight: 600;
+      font-size:14x;
+    }
+    .time{
+      color:grey;
+      font-size:13px;
+    }
+    .subject{
+      font-size: 13.3px;;
+      font-weight: 600;
+      margin-bottom:2px;
+    }
+    .preview{
+      color:grey;
+      font-size:12px;
+      margin-right:20px;
+    }
 </head>
 <body>
   
