added the html from previous exercise

--- a/exercise/13e.html
+++ b/exercise/13e.html
@@ -60,8 +60,26 @@
       font-size:12px;
       margin-right:20px;
     }
+    </style>
 </head>
 <body>
-  
+  <div class="main">
+    <div class="header">
+      ALL INBOXES
+    </div>
+    <div class="e-mail">
+      <div class="image">
+        <img class="pfp" src="10/pfp/download.jpg">
+      </div>
+      <div class="text">
+        <div class="text-top">
+          <div class="username">Chewy Production</div>
+          <div class="time">4:58 PM</div>
+        </div>
+        <div class="subject">Biggest sales of the year!</div>
+        <div class="preview">Hey there! We're writing to tell you about our...</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
