--- a/exercise/13e.html
+++ b/exercise/13e.html
@@ -67,18 +67,21 @@
     <div class="header">
       ALL INBOXES
     </div>
-    <div class="e-mail">
-      <div class="image">
-        <img class="pfp" src="10/pfp/download.jpg">
-      </div>
-      <div class="text">
-        <div class="text-top">
-          <div class="username">Chewy Production</div>
-          <div class="time">4:58 PM</div>
+    <div class="inbox">
+      <div class="e-mail">
+        <div class="image">
+          <img class="pfp" src="10/pfp/download.jpg">
         </div>
-        <div class="subject">Biggest sales of the year!</div>
-        <div class="preview">Hey there! We're writing to tell you about our...</div>
+        <div class="text">
+          <div class="text-top">
+            <div class="username">Chewy Production</div>
+            <div class="time">4:58 PM</div>
+          </div>
+          <div class="subject">Biggest sales of the year!</div>
+          <div class="preview">Hey there! We're writing to tell you about our...</div>
+        </div>
       </div>
+      
     </div>
   </div>
 </body>
