completed the final html

--- a/exercise/13e.html
+++ b/exercise/13e.html
@@ -16,6 +16,7 @@
       padding-left: 10px;
       padding-right:10px;
       width:fit-content;
+      padding-bottom:10px;
     }
     .header{
       font-family:Arial;
@@ -28,13 +29,14 @@
       display:flex;
       flex-direction: row;
       align-items: center;
-      margin-bottom:30px;
+      margin-bottom:20px;
     }
     .pfp{
       height:40px;
       width:40px;
       border-radius:25px;
       margin:5px;
+      object-fit: cover;
     }
     .text-top{
       display:flex;
@@ -81,7 +83,31 @@
           <div class="preview">Hey there! We're writing to tell you about our...</div>
         </div>
       </div>
-      
+      <div class="e-mail">
+        <div class="image">
+          <img class="pfp" src="10/pfp/OIP.jpg">
+        </div>
+        <div class="text">
+          <div class="text-top">
+            <div class="username">Best Buy</div>
+            <div class="time">12:32 PM</div>
+          </div>
+          <div class="subject">Your Best Buy eReceipt</div>
+          <div class="preview">Thank you for shopping at Best Buy, here is....</div>
+        </div>
+      </div><div class="e-mail">
+        <div class="image">
+          <img class="pfp" src="10/pfp/OIP (1).jpg">
+        </div>
+        <div class="text">
+          <div class="text-top">
+            <div class="username">Netflix</div>
+            <div class="time">9:00 AM</div>
+          </div>
+          <div class="subject">Here's what's coming soon to Netflix</div>
+          <div class="preview">Brand new movies and shows, old favorites....</div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
