--- a/project/youtube.html
+++ b/project/youtube.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="styles/video.css">
 </head>
 <body>
+  <!--Up to date to chapter 13-->
   <div class="header">
     <div class="left-section">
       <img  class="hamburger-menu" src="icons/hamburger-menu.svg">
