--- a/project/youtube.html
+++ b/project/youtube.html
@@ -9,10 +9,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/general.css">
 <link rel="stylesheet" href="styles/header.css">
+<link rel="stylesheet" href="styles/sidebar.css">
 <link rel="stylesheet" href="styles/video.css">
+
 </head>
+<!--Up to date to chapte-->
 <body>
-  <!--Up to date to chapter 13-->
   <div class="header">
     <div class="left-section">
       <img  class="hamburger-menu" src="icons/hamburger-menu.svg">
@@ -32,6 +34,9 @@
       <img class="notifications-icon" src="icons/notifications.svg">
       <img class="current-user-icon" src="channel-profile/my-channel.jpeg">
     </div>
+  </div>
+  <div class="sidebar">
+    sidebar
   </div>
   <br>
   <div class="video-container">
