--- a/exercise/14/14d.html
+++ b/exercise/14/14d.html
@@ -15,6 +15,40 @@
   bottom:0;
     ">right-sidebar</div>
   
+  <div style="
+  background-color: rgba(0,0,0,0.5);
+  position:fixed;
+  top:0;
+  bottom:0;
+  right:0;
+  left:0;
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  ">
+  <div style="
+  background-color: white;
+  border:none;
+  border-radius:8px;
+  padding:10px;
+  padding-right:180px;"
+  >
+    <div style="
+    font-family: Arial;
+    font-size: 30px;
+    font-weight:600;
+    margin-bottom: 10px;
+    ">Modal Title</div>
+    <div style="font-size: 16px;
+    font-family: Arial;
+    
+    margin-bottom: 10px;">This is a modal</div>
+  <div>
+    <button >Close</button> 
+  </div>  
+</div>  
   
+</div>
 </body>
 </html>
