some commit lefts

--- a/exercise/14/14d.html
+++ b/exercise/14/14d.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>14b</title>
+  <title>14d</title>
 </head>
 <body style="height:3000px;">
+  <!--sidebar-->
   <div style="
   background-color: green;
   position:fixed;
@@ -14,7 +15,7 @@
   top:0;
   bottom:0;
     ">right-sidebar</div>
-  
+  <!--background-->
   <div style="
   background-color: rgba(0,0,0,0.5);
   position:fixed;
@@ -27,13 +28,14 @@
   justify-content: center;
   align-items: center;
   ">
+  <!--Modal-->
   <div style="
   background-color: white;
   border:none;
   border-radius:8px;
   padding:10px;
   padding-right:180px;"
-  >
+  ><!--This is a modal class for text-->
     <div style="
     font-family: Arial;
     font-size: 30px;
