--- a/exercise/15ef.html
+++ b/exercise/15ef.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .container{
+      width:max-content;
+      position:relative;
+    }
+    .sale{
+      position:absolute;
+      background-color: black;
+      color:white;
+      top:10px;
+      right:0px;
+      padding:4px;
+      padding-left: 8px;
+      padding-right:8px;
+      font-size: 11.5px;
+      font-family: Arial;
+      font-weight: 300;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <img src="OIP.jpg" class="">
-    <div class="sale">20% off</div>
+    <div class="sale">20% OFF</div>
     <div class="cart">
       <button>Add to Cart</button>
     </div>
