--- a/exercise/15ef.html
+++ b/exercise/15ef.html
@@ -22,6 +22,16 @@
       font-family: Arial;
       font-weight: 300;
     }
+    .cart{
+      width:260px;
+      height:75px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position:absolute;
+      bottom:0px;
+      background-color: rgba(255, 255, 255, 0.7);
+    }
   </style>
 </head>
 <body>
