--- a/exercise/15ef.html
+++ b/exercise/15ef.html
@@ -39,7 +39,8 @@
     <img src="OIP.jpg" class="">
     <div class="sale">20% OFF</div>
     <div class="cart">
-      <button>Add to Cart</button>
+      <button
+      style="padding:4px; padding-left: 10px; padding-right: 8px;">Add to Cart</button>
     </div>
   </div>
 </body>
