--- a/project/youtube.html
+++ b/project/youtube.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="styles/video.css">
 
 </head>
-<!--Up to date to chapte-->
+<!--UP to ate to lesson 15-->
 <body>
   <div class="header">
     <div class="left-section">
@@ -31,7 +31,10 @@
     <div class="right-section">
       <img class="upload-icon" src="icons/upload.svg">
       <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-      <img class="notifications-icon" src="icons/notifications.svg">
+      <div class="notif-container">
+        <img class="notifications-icon" src="icons/notifications.svg">
+        <div class="notif-counter">3</div>
+      </div>
       <img class="current-user-icon" src="channel-profile/my-channel.jpeg">
     </div>
   </div>
@@ -44,6 +47,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-1.webp" alt="MArquee Brown video">
+      <div class="video-time">14:20</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
@@ -60,6 +64,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-2.webp" alt="MArquee Brown video">
+      <div class="video-time">8:22</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
@@ -77,6 +82,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-3.webp" alt="MArquee Brown video">
+      <div class="video-time">9:13</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
@@ -94,6 +100,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-4.webp" alt="MArquee Brown video">
+      <div class="video-time">22:09</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
@@ -111,6 +118,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-5.webp" alt="MArquee Brown video">
+      <div class="video-time">11:17</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
@@ -127,6 +135,7 @@
   <div class="preview">
     <div class="thumbnail-row">
       <img class="thumbnail"src="thumbnails/thumbnail-6.webp" alt="MArquee Brown video">
+      <div class="video-time">19:59</div>
     </div>
     <div class="video-info-grid">
       <div class="channel-picture">
