--- a/project/youtube.html
+++ b/project/youtube.html
@@ -15,6 +15,7 @@
 </head>
 <!--UP to ate to lesson 15-->
 <body>
+  <!--HEADER-->
   <div class="header">
     <div class="left-section">
       <img  class="hamburger-menu" src="icons/hamburger-menu.svg">
@@ -38,10 +39,16 @@
       <img class="current-user-icon" src="channel-profile/my-channel.jpeg">
     </div>
   </div>
+
+<!--Sidebar-->
   <div class="sidebar">
     sidebar
   </div>
+  
+  
+  
   <br>
+  <!--Video-->
   <div class="video-container">
   <!--First-->
   <div class="preview">
