added the final touch to the prokect

--- a/project/youtube.html
+++ b/project/youtube.html
@@ -16,7 +16,7 @@
 </head>
 <!--Except the last 6 videos and video linking the code is up to date to final project-->
 <body>
-  <div class="header">
+  <header class="header">
     <div class="left-section">
       <img  class="hamburger-menu" src="icons/hamburger-menu.svg">
       <img class="youtube-logo" src="icons/youtube-logo.svg">
@@ -47,8 +47,8 @@
       </div>
       <img class="current-user-icon" src="channel-profile/my-channel.jpeg">
     </div>
-  </div>
-  <div class="sidebar">
+  </header>
+  <nav class="sidebar">
     <div class="sidebar-link">
       <img src="sidebar/home.svg">
       Home
@@ -73,9 +73,10 @@
       <img src="sidebar/library.svg">
       Library
     </div>
-  </div>
+  </nav>
 
   <br>
+  <main>
   <div class="video-container">
   <!--First-->
   <div class="preview">
@@ -183,5 +184,6 @@
     </div>
   </div>
 </div>
+</main>
 </body>
 </html>
